Reduce check method indentation